added Appbar component

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
   z-index: -1;
 }
 #search {
-  margin: 8px;
+  /*margin: 8px;*/
 }
 </style>
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css">
