--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!doctype html>
+<html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.1/leaflet.css">
@@ -5,7 +7,11 @@
     <link rel="stylesheet" href="/mdl/mdl-theme.css">
     <link rel="stylesheet" href="/css/main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--HEAD-->
 </head>
 <body>
+<!--BODY-->
 <script src="/bundle.js"></script>
 <script src="/mdl/material.min.js"></script>
+</body>
+</html>
