--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--HEAD-->
 </head>
 <body>
-<!--BODY-->
+<div id="app"><!--BODY--></div>
 <script src="/bundle.js"></script>
 <script src="/mdl/material.min.js"></script>
 </body>
