`privilegedClientIP` from server and client-side

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 <div id="app"><!--BODY--></div>
+<script>window.privilegedClientIP = true</script>
 <script src="/bundle.js"></script>
 <script src="/mdl/material.min.js"></script>
 </body>
