--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 <div id="app"><!--BODY--></div>
 <script>window.privilegedClientIP = true</script>
+<script src="https://unpkg.com/jquery@3.3.1/dist/jquery.js"></script>
 <script src="/bundle.js"></script>
 <script src="/mdl/material.min.js"></script>
 </body>
