swap `react-ga` for static google tag manager

--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
 <script src="https://unpkg.com/jquery@3.3.1/dist/jquery.js"></script>
 <script src="/bundle.js"></script>
 <script src="/mdl/material.min.js"></script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WWCWDGS');</script>
+<!-- End Google Tag Manager -->
 </body>
 </html>
