add fathom analytics

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/mdl/mdl-theme.css">
     <link rel="stylesheet" href="/css/main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://cdn.usefathom.com/script.js" site="PXCWTLRI" spa="auto" defer></script>
     <!--HEAD-->
 </head>
 <body>
