removes fathom analytics reference

--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css">
-    <link rel="stylesheet" href="/mdl/mdl-theme.css">
-    <link rel="stylesheet" href="/css/main.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://moth.artsmia.org/script.js" site="PXCWTLRI" spa="auto" defer></script>
-    <!--HEAD-->
-</head>
-<body>
-<div id="app"><!--BODY--></div>
-<script>window.privilegedClientIP = true</script>
-<script src="/bundle.js"></script>
-<script src="/mdl/material.min.js"></script>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WWCWDGS');</script>
-<!-- End Google Tag Manager -->
-</body>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+		<link rel="stylesheet" href="/mdl/mdl-theme.css" />
+		<link rel="stylesheet" href="/css/main.css" />
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+		<!--HEAD-->
+	</head>
+	<body>
+		<div id="app"><!--BODY--></div>
+		<script>
+			window.privilegedClientIP = true
+		</script>
+		<script src="/bundle.js"></script>
+		<script src="/mdl/material.min.js"></script>
+		<!-- Google Tag Manager -->
+		<script>
+			;(function (w, d, s, l, i) {
+				w[l] = w[l] || []
+				w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" })
+				var f = d.getElementsByTagName(s)[0],
+					j = d.createElement(s),
+					dl = l != "dataLayer" ? "&l=" + l : ""
+				j.async = true
+				j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl
+				f.parentNode.insertBefore(j, f)
+			})(window, document, "script", "dataLayer", "GTM-WWCWDGS")
+		</script>
+		<!-- End Google Tag Manager -->
+	</body>
 </html>
